[package]
name = "mcvcli"
description = "A command line interface for managing Minecraft servers."
version = "2.2.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/mcjars/mcvcli"
repository = "https://github.com/mcjars/mcvcli.git"

[[bin]]
name = "mcvcli"
path = "src/main.rs"

[dependencies]
clap = "4.5.28"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.10.0", features = ["full"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
colored = "3.0.0"
dirs = "6.0.0"
flate2 = "1.0.35"
tar = "0.4.43"
zip = "2.3.0"
sha2 = "0.10.8"
indexmap = { version = "2.7.1", features = ["serde"] }
futures = "0.3.31"
chrono = "0.4.39"
human_bytes = { version = "0.4.3", features = ["si-units", "fast"] }
walkdir = "2.5.0"
fastnbt = "2.5.0"
term_size = "0.3.2"
sysinfo = "0.34.0"
rand = "0.9.0"
ipipe = "0.11.7"
xz2 = "0.1.7"
