[package]
name = "mcvcli"
description = "A command line interface for managing Minecraft servers."
version = "2.4.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/mcjars/mcvcli"
repository = "https://github.com/mcjars/mcvcli.git"
keywords = ["minecraft", "server", "cli", "command-line", "utilities"]
categories = ["command-line-utilities"]

[[bin]]
name = "mcvcli"
path = "src/main.rs"

[dependencies]
clap = "4.5.28"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "signal", "process"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
colored = "3.0.0"
dirs = "6.0.0"
flate2 = "1.0.35"
tar = "0.4.43"
zip = { version = "3.0.0", default-features = false, features = ["bzip2", "deflate", "sha1", "time", "zstd", "lzma-rs"] }
sha2 = "0.10.8"
indexmap = { version = "2.7.1", features = ["serde"] }
futures = "0.3.31"
chrono = "0.4.39"
human_bytes = { version = "0.4.3", features = ["si-units", "fast"] }
walkdir = "2.5.0"
fastnbt = "2.5.0"
term_size = "0.3.2"
sysinfo = "0.36.0"
rand = "0.9.0"
ipipe = "0.11.7"
xz2 = { version = "0.1.7", features = ["static"] }
atoi = "2.0.0"
msp = "0.1.2"
anyhow = "1.0.98"
